--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 		<tomcat.version>9.0.43</tomcat.version>
+		<spring-security.version>5.4.7</spring-security.version>
+		<spring-framework.version>5.3.14</spring-framework.version>
 	</properties>
 
 	<dependencies>
